src/test/deca/context/valid/class/39-declParamValid2.deca
/* Description:
    teste la regle (3.13) (3.12) de la vérification contextuelles
    Déclaration de paramètre prédefinie

    Historique:
      cree le 21/01/2020
*/

class A {
  int methode(Object a, int b, float c, A d, B e, C f){} // une declaration de parametre valid

}
class B extends A{

}
class C extends B{

}
